-Added function treeContradiction, which gives the contradiction difference (CD) value between two topologies, as described in Bapst et al. in press (Syst Biol)
-Added function setRootAge which will add a $root.time element to a tree, given a set of ages for tip taxa, using the age for the youngest matching taxon name
-


Version - 2.8 - 04-06-17 (Not Released to CRAN)
-Added additional checks so that helpful error messages are given if species names are accidentally left in as a column in timeList for bin_cal3TimePaleoPhy and bin_timePaleoPhy, thanks Victoria Arbour for this bug report
-Added informative error message if sliceTime is later in time than the lattest (most recent) tip (thanks Graeme Lloyd for reporting this)
-Merged two taxa due to an accidental taxon name mis-spelling in the kanto dataset
-Fixed a missing line in the example code for perCapitaRates
-Added argument 'yAxisLims' to multiDiv functions so that the y axis (richness) can be constrained by the user, thanks to Robin Beck for suggestion (01-23-17)
-Added examples of using simFossilRecord with randomly-sampled rate variation, thanks to Laura Soul for making me realize I'd already made this possible! (03-20-17)
-Small edit to createMrBayesConstraints documentation
-Added example of a two-way cluster analysis (sensu Miller 1988) to examples for kanto data, based on code provided by Max Christie (Thanks!)
-Added new function: createMrBayesTipCalibrations, which creates a block of MrBayes codes for calibrating tip ages in a tip-dating analysis

Version - 2.7 - 04-12-16
-Modified probAnc documetentation so that indirect descendant examples are shown
-Modified probAnc so that calculated NaN values are replaced with zero and a message is printed
-Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
-Modified plotTraitgram to allow input of simulated node values, edited and clarified documentation and examples