@@ -95,6 +95,7 @@ export(sRate2sProb)
 export(sampleRanges)
 export(seqTimeList)
 export(setRootAge)
+export(setRootAges)
 export(simFossilRecord)
 export(simTermTaxa)
 export(simTermTaxaAdvanced)
